Fix width of main area on smaller screens

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -15,7 +15,7 @@ body {
     font-size: 2.7em;
   }
   body main {
-    width: 30%;
+    width: 70%;
     h2 {
       font-size: 2em;
     }
